--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <head>
     <meta charset = "utf-8">
     <title> project: first github webpage</title>
+    <style>
+      a:hover {
+        background color: rgb(255,214,255)
+      }
+      a:active {
+        background color: rgb(255,214,255)
+      }
+      a:focus {
+        background color: rgb (255,214,255)
+      }
   </head>
 
 <body>
