--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset = "utf-8">
     <title> project: first github webpage</title>
     <style>
-      a:hover {
-        background color: rgb(255,214,255)
-      }
-      a:active {
-        background color: rgb(255,214,255)
-      }
       a:focus {
         background color: rgb (255,214,255)
       }
+      a:hover {
+        background color: rgb (255,214,255)
+      }
+      a:active {
+        background color: rgb (255,214,255)
+      }
+    </style>
   </head>
 
 <body>
