--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta charset = "utf-8">
     <title> project: first github webpage</title>
     <style>
-      a:focus {
-        background color: rgb (255,214,255)
-      }
-      a:hover {
-        background color: rgb (255,214,255)
-      }
-      a:active {
+      a:hover a:active a:focus {
         background color: rgb (255,214,255)
       }
     </style>
