--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset = "utf-8">
     <title> project: first github webpage</title>
     <style>
-     
+      p {
+        font-family: sans-serif;
+      }
+      a:hover {
+        background color: rgb (255,214,255);
+      }
     </style>
   </head>
 
