--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       p {
         font-family: sans-serif;
       }
-      a:hover {
+      a:hover a:active a:focus {
         background color: rgb (255,214,255);
       }
     </style>
