--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
       p {
         font-family: sans-serif;
+        color: black;
+        background color: grey;
       }
       a:hover a:active a:focus {
         background color: rgb (255,214,255);
