--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset = "utf-8">
     <title> project: first github webpage</title>
     <style>
+      body {
+        font-family: serif;
+      }
+      
+      h1 {
+        font-family: serif;
+        color: green;
+      }
+      
       p {
         font-family: sans-serif;
         color: black;
