--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       p {
         font-family: sans-serif;
         color: black;
-        background color: grey;
+        background color: grey
       }
       a:hover a:active a:focus {
-        background color: rgb (255,214,255);
+        background color: rgb (255,214,255)
       }
     </style>
   </head>
