--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
 <body>
-  <h1>first github webpage project </h1>
+  <h1 style ="background = orange; color=white;">first github webpage project </h1>
   <p>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
   </p>
