--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0"> <!-- Comment: mobile device support-->
+    <!-- Comment: mobile device support-->
+    <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
     <title> project: first github webpage</title>
     <style>
       body {
