--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset = "utf-8">
+    <!-- Comment: mobile device view support -->
     <meta name="viewport" content="width=device-width,intial-scale=1.0"> 
     <title> project: first github webpage</title>
     <style>
