--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <head>
     <meta charset = "utf-8">
     <!-- Comment: mobile device view support -->
-    <meta name="viewport" content="width=device-width,intial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
+    
+    <!-- Comment: refresh webpage every 5 seconds -->
+    <meta http-equiv="refresh" content = "5">
+    
+    <meta name="description" content="webpage">
     <title> project: first github webpage</title>
     <style>
       body {
