--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <body>
   <h1 style ="background = orange; color=white;">first github webpage project </h1>
   <p>
+  This following is an earlier webpage built with wordpress template. <br>
+  Hosted on godaddy.com. <br>
+  Next step: plan to try firebase<br>
+  <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
   </p>
   
