--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       
       p {
         font-family: sans-serif;
-        color: black;
-        background: grey;
+        color: magenta;
+        background: yellow;
       }
       a:hover a:active a:focus {
         background: rgb(255,214,255);
@@ -35,7 +35,7 @@
 <body>
   <h1 style ="background = orange; color=white;">first github webpage project </h1>
   <p>
-  This following is an earlier webpage built with wordpress template. <br>
+  The following weblink is an earlier webpage built with wordpress template. <br>
   Hosted on godaddy.com. <br>
   Next step: plan to try firebase<br>
   <br><br><br><br><br>
