--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       p {
         font-family: sans-serif;
-        color: magenta;
+        color: red;
         background: yellow;
       }
       a:hover a:active a:focus {
@@ -35,9 +35,15 @@
 <body>
   <h1 style ="background = orange; color=white;">first github webpage project </h1>
   <p>
-  The following weblink is an earlier webpage built with wordpress template. <br>
-  Hosted on godaddy.com. <br>
+  <!-- Comment
+       <div>: block, with line changes before & after tag
+       <span>: no line change before & after block
+       <br>: line break, no closing tag
+  -->
+  <div>The following weblink is an earlier webpage built with wordpress template.
+    Hosted on godaddy.com. </div>
   Next step: plan to try firebase<br>
+  <span>-------------------------------</span>
   <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
   </p>
