--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
       p {
         font-family: sans-serif;
         color: red;
-        background: yellow;
+        background: light blue;
       }
       a:hover a:active a:focus {
         background: rgb(255,214,255);
+      }
+      div {
+        font-family: sans-serif;
+        color: red;
+        background: yellow;
       }
     </style>
   </head>
