--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <br>: line break, no closing tag
   -->
   <div>The following weblink is an earlier webpage built with wordpress template.
-    Hosted on godaddy.com. </div>
+    Hosted on &lt;godaddy.com&gt;. </div>
   Next step: plan to try firebase<br>
   <span>-------------------------------</span>
   <br><br><br><br><br>
