--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        <span>: no line change before & after block
        <br>: line break, no closing tag
   -->
-  <div>The following weblink is an earlier webpage built with wordpress template.
+  <div>The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
     Hosted on &lt;godaddy.com&gt;. </div>
   Next step: plan to try firebase<br>
   <span>-------------------------------</span>
