--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
        <span>: no line change before & after block
        <br>: line break, no closing tag
   -->
-  <div>The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
+  <div id="firstParagraph">The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
     Hosted on &lt;godaddy.com&gt;. </div>
   Next step: plan to try firebase<br>
   <span>-------------------------------</span>
   <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
+  <br><br>
+  <div a href="#firstParagraph">jump to first paragraph</div>
   </p>
   
 </body>
