--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
   <br><br>
-  <div a href="#firstParagraph">jump to first paragraph</div>
+  <div a href="#firstParagraph">jump to first paragraph</a></div>
   </p>
   
 </body>
