--- a/index.html
+++ b/index.html
@@ -39,21 +39,27 @@
 
 <body>
   <h1 style ="background = orange; color=white;">first github webpage project </h1>
-  <p>
   <!-- Comment
        <div>: block, with line changes before & after tag
        <span>: no line change before & after block
        <br>: line break, no closing tag
   -->
-  <div id="firstParagraph">The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
-    Hosted on &lt;godaddy.com&gt;. </div>
+  <div id="firstParagraph">
+    <p>The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
+    Hosted on &lt;godaddy.com&gt;.
   Next step: plan to try firebase<br>
   <span>-------------------------------</span>
   <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
   <br><br>
-  <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   </p>
+  </div>
+  
+  <div>
+    <img src="./drawing1.png" height = 100px; width = 100% alight="center" alt="picture">
+  </div>
+  <div> <a href="#firstParagraph">jump to first paragraph</a></div>
+  
   
 </body>
 
