--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
   
   <div>
-    <img src="./drawing1.png" height = 100px; width = 100% alight="center" alt="picture">
+    <img src="./drawing1.png" alight="center" alt="picture">
   </div>
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   
