--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="refresh" content = "60">
     
     <meta name="description" content="webpage">
-    <title> project: first github webpage</title>
+    <title id="pageTop"> project: first github webpage</title>
     <style>
       body {
         font-family: serif;
@@ -59,6 +59,7 @@
     <img src="./drawing1.png" alight="center" alt="picture">
   </div>
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
+  <div> <a href="#pageTop">jump to top of page</a></div>
   
   
 </body>
