--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     Hosted on &lt;godaddy.com&gt;.
   Next step: plan to try firebase<br>
   <span>-------------------------------</span>
-  <br><br><br><br><br>
   <a href = "http://www.awplanets.com">Welcome to wwgoog2017 webpage </a>
+      <span>-------------------------------</span>
   <br><br>
   </p>
   </div>
