--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         font-family: sans-serif;
         color: red;
         background: yellow;
+        width: 200px;
       }
     </style>
   </head>
