--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         font-family: sans-serif;
         color: red;
         background: yellow;
-        width: 200px;
+        width: 75%;
       }
     </style>
   </head>
