--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   
   <div>
-    <img src="./drawing1.png" alight="center" alt="picture">
+    <img src="./drawing1.png" align="center" alt="picture">
   </div>
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   <div> <a href="#top">jump to top of page</a></div>
