--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
     <meta name="description" content="webpage">
     <title> project: first github webpage</title>
+    
+    <link href="style.css" rel="stylesheet">
+    <!--
     <style>
       body {
         font-family: serif;
@@ -36,6 +39,7 @@
         width: 75%;
       }
     </style>
+    -->
   </head>
 
 <body>
