--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <p>The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
     Hosted on &lt;godaddy.com&gt;.
   Next step: plan to try firebase<br>
-      <a href = "http://www.awplanets.com"><span style="align:center;">Welcome to wwgoog2017 webpage</span> </a>
-      <br><span>--------------------------------------</span>
+      <a href = "http://www.awplanets.com"><span style="text-align:center">Welcome to wwgoog2017 webpage</span> </a>
+      <span>--------------------------------------</span>
   <br><br>
   </p>
   </div>
