--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     Hosted on &lt;godaddy.com&gt;.
   Next step: plan to try firebase<br>
       <a href = "http://www.awplanets.com"><span style="text-align:center" width=75%>Welcome to wwgoog2017 webpage</span> </a>
-      <span>--------------------------------------</span>
+      <br><span>--------------------------------------</span>
   <br><br>
   </p>
   </div>
