--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <h1>first github webpage project </h1>
+  <img id="logo" src="logoCone.png" alt="cone shaped logo">
   <!-- Comment
        <div>: block, with line changes before & after tag
        <span>: no line change before & after block
