--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <h1>first github webpage project </h1>
-  <img id="logo" src="logoCone.png" alt="cone shaped logo">
+  <img id="logo" src="logoCone.png" alt="cone shaped logo" width="20px" height = "20px">
   <!-- Comment
        <div>: block, with line changes before & after tag
        <span>: no line change before & after block
