--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 <body>
   <h1>first github webpage project </h1>
   <img id="logo" src="logoCone.png" alt="cone shaped logo" width="5%" height = "5%">
+  
+  <script type="text/javascript">
+    alert("First javascript");
+  </script>
+  
   <!-- Comment
        <div>: block, with line changes before & after tag
        <span>: no line change before & after block
        <br>: line break, no closing tag
   -->
-  <div id="firstParagraph">
+    <div id="firstParagraph">
     <p>The following <i>weblink</i> is an earlier webpage built with <b>wordpress</b> template.
     Hosted on &lt;godaddy.com&gt;.
   Next step: plan to try firebase<br>
