--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="style.css" rel="stylesheet">
     
     <script type="text/javascript">
-      function fnButton {
+      function fnButton() {
         alert("First javascript");
       }
     </script>
