--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <img id="logo" src="logoCone.png" alt="cone shaped logo" width="5%" height = "5%">
   
   <input type="button" value="first button + javascript" onclick = "fnButton()">
+  <div><a href = "javascriptExample.html">Cool javascript example</a></div>
   
   <!-- Comment
        <div>: block, with line changes before & after tag
