--- a/javascriptExample.html
+++ b/javascriptExample.html
@@ -26,7 +26,7 @@
     <select id="selName">
       <option value = "100">One Hundred</option>
       <option value = "200">Two Hundred</option>
-      <option value = "300>Three Hundred</option>
+      <option value = "300">Three Hundred</option>
     </select>
   </p>
   <p>Quantity: <input type="number" id="txtQty" min = "0" value = "0"/></p>
