--- a/javascriptExample.html
+++ b/javascriptExample.html
@@ -30,7 +30,7 @@
     </select>
   </p>
   <p>Quantity: <input type="number" id="txtQty" min = "0" value = "0"/></p>
-  <p>input type = "button" value = "Press to see results" onclick="fnOrder()" /></p>
+  <p><input type = "button" value = "Press to see results" onclick="fnOrder()" /></p>
   <hr /> <div id="divShow"></div>
   
 </body>
