--- a/javascriptExample.html
+++ b/javascriptExample.html
@@ -14,7 +14,7 @@
       total = qty * price;
       
       console.log("here 1");
-      if total > 500 {
+      if (total > 500) {
         document.write("Option * Quantity > 500");
         console.log("here 2");
       }else{
