--- a/javascriptExample.html
+++ b/javascriptExample.html
@@ -15,9 +15,9 @@
       
       imgName = selName.options[selName.selectedIndex].text + ".jpg";
       if (total >500){
-        msg = "Option * Quantity > 500);
+        msg = "Option * Quantity > 500";
       } else {
-        msg = "Option * Quantity not > 500);
+        msg = "Option * Quantity not > 500";
       }
       divShow.innerHTML = "<p>Unit price: " + price + "</p>" + 
         "<p>Sub-total: " + total + "</p>" +
