--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       }
     </script>
     <script src="script.js"></script>
+    <style>
+      a:hover {
+        transform: rotate (45deg);
+      }
+    </style>
   </head>
 
 <body>
