--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   <div> <a href="#top">jump to top of page</a></div>
   
+  <script src="jquery.js"></script>
   
 </body>
 
