--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset = "utf-8">
     <!-- Comment: mobile device view support -->
     <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
     <!-- Comment: refresh webpage every 60 seconds -->
     <meta http-equiv="refresh" content = "60">
