--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   
   <input type="button" value="first button + javascript" onclick = "fnButton()">
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
+  <div><a hre = "javascriptOnOffLight.html">javascript example: on off light</a></div>
+  
   
   <!-- Comment
        <div>: block, with line changes before & after tag
