--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
   <input type="button" value="first button + javascript" onclick = "fnButton()">
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
-  <div><a hre = "javascriptOnOffLight.html">javascript example: on off light</a></div>
+  <div><a href = "javascriptOnOffLight.html">javascript example: on off light</a></div>
   
   
   <!-- Comment
