--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <body>
   <h1>first github webpage project </h1>
-  <img id="logo" src="logoCone.png" alt="cone shaped logo" width="5%" height = "5%">
+  <img id="logo" src="logoCone.png" alt="cone shaped logo" width="5%" height = "5%" onmouseover="fnLogo();">
   
-  <input type="button" value="first button + javascript" onclick = "fnButton()">
+  <input type="button" value="first button + javascript" onclick = "fnButton();">
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
   <div><a href = "javascriptOnOffLight.html">javascript example: on off light</a></div>
   
