--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   <div> <a href="#top">jump to top of page</a></div>
   
-  <script src="jquery.js"></script>
+  <script src="logoResize.js"></script>
   
 </body>
 
