--- a/javascriptOnOffLight.html
+++ b/javascriptOnOffLight.html
@@ -22,7 +22,7 @@
     function fnOn() {
       $(".btn").css({"border-color":"black",
         "color":"black",
-        "background-color":"white")});
+        "background-color":"white"});
       $(".body").css("background-color","white");
     }
   </script>
