--- a/javascriptOnOffLight.html
+++ b/javascriptOnOffLight.html
@@ -30,7 +30,7 @@
 
 <body>
   <input type="button" value="Lights off" class = "btn" onclick="fnOff();">
-  <input type="button" value="Lights on" class = ="btn" onclick="fnOn();">
+  <input type="button" value="Lights on" class = "btn" onclick="fnOn();">
 </body>
 
 </html>
