first commit try with visual studio 2019 on local windows 10 machine

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
   <head>
+    <!-- making first visual studio 2019 local commit-->
+
     <meta charset = "utf-8">
     <!-- Comment: mobile device view support -->
     <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
