--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <head>
     <!-- making first visual studio 2019 local commit-->
 
-    <meta charset = "utf-8">
     <!-- Comment: mobile device view support -->
-    <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
+    <meta name="viewport" content="text/html; charset=utf-8, width=device-width, intial-scale=1.0"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
     <!-- Comment: refresh webpage every 60 seconds -->
