--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <h1>first github webpage project </h1>
   <img id="logo" src="logoCone.png" alt="cone shaped logo" width="5%" height = "5%" onmouseover="fnLogo();">
   
-  <input type="button" value="first button + javascript" onclick = "fnButton();">
+  <input type="button" value="first button + javascript" onclick = "fnButton();" />
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
-  <div><a href = "javascriptOnOffLight.html">javascript example: on off light</a></div>
-  
+  <div><a href = "jQueryOnOffLight.html">javascript example: on off light</a></div>
+  <div><a href="jQueryPullDownMenu.html"></a></div>
   
   <!-- Comment
        <div>: block, with line changes before & after tag
@@ -49,7 +49,7 @@
   </div>
   
   <div>
-    <img src="drawing1.png" align="center" alt="picture">
+    <img src="drawing1.png" align="middle" alt="picture">
   </div>
   <div> <a href="#firstParagraph">jump to first paragraph</a></div>
   <div> <a href="#top">jump to top of page</a></div>
