--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <input type="button" value="first button + javascript" onclick = "fnButton();" />
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
   <div><a href = "jQueryOnOffLight.html">javascript example: on off light</a></div>
-  <div><a href="jQueryPullDownMenu.html"></a></div>
+  <div><a href="jQueryPullDownMenu.html">javascript example: pull down menu</a></div>
   
   <!-- Comment
        <div>: block, with line changes before & after tag
