added photo album

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div><a href = "javascriptExample.html">Cool javascript example</a></div>
   <div><a href = "jQueryOnOffLight.html">javascript example: on off light</a></div>
   <div><a href="jQueryPullDownMenu.html">javascript example: pull down menu</a></div>
+    <div><a href="jQueryAlbum.html">javascript example: photo album</a></div>
   
   <!-- Comment
        <div>: block, with line changes before & after tag
